fix CJK input issue in list of cm6 editor
in an empty number list like `1. `, when entering text with CJK input method, the raw text are considered as a part of cm-formatting-list-ol and all squeezed in a small space.

--- a/src/050-editor.css
+++ b/src/050-editor.css
@@ -69,6 +69,8 @@
   white-space: pre;
   display: inline-flex;
   justify-content: flex-end;
+}
+.markdown-source-view.mod-cm5 .cm-formatting-list-ol {
   width: 1rem;
 }
 
